fix: spacing in millennium settings header

--- a/src/css/steam/millenniumSettings.css
+++ b/src/css/steam/millenniumSettings.css
@@ -57,6 +57,10 @@ body .MillenniumDesktopSidebar {
     padding: 0;
 }
 
+/*^ Divider*/
+.MillenniumSettings.ModalDialogPopup ._18QCu-7MTzd51UpVbYysDy ._1Hye7o1wYIfc9TE9QKRW4T {
+    display: none;
+}
 
 
 /*
